Changing 2 folders name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: library
     volumes:
-      - ./db/ddl/1_ddl.sql:/docker-entrypoint-initdb.d/1_ddl.sql
-      - ./db/dml/2_dml.sql:/docker-entrypoint-initdb.d/2_dml.sql
+      - ./db/DDL/1_ddl.sql:/docker-entrypoint-initdb.d/1_ddl.sql
+      - ./db/DML/2_dml.sql:/docker-entrypoint-initdb.d/2_dml.sql
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "postgres"]
       interval: 5s
